@@ -1,0 +1,7 @@
+macro (GAMMU_TUNE_SHARED _target)
+    if(CMAKE_COMPILER_IS_GNUCC AND NOT (CMAKE_COMPILER_IS_MINGW OR
+        CMAKE_COMPILER_IS_CYGWIN OR CMAKE_COMPILER_IS_GNUCXX))
+        set_target_properties (${_target} PROPERTIES COMPILE_FLAGS -fPIC)
+    endif(CMAKE_COMPILER_IS_GNUCC AND NOT (CMAKE_COMPILER_IS_MINGW OR
+        CMAKE_COMPILER_IS_CYGWIN OR CMAKE_COMPILER_IS_GNUCXX))
+endmacro (GAMMU_TUNE_SHARED)
