@@ -5,24 +5,30 @@
 project (gammu-helper C)
 
 include(GammuTuneCompiler)
+include(GammuTuneFlags)
 
 include_directories (
     "${Gammu_BINARY_DIR}/include"
     )
 
 add_library(string STATIC string.c)
+GAMMU_TUNE_SHARED(string)
 
 add_library (printing STATIC printing.c)
+GAMMU_TUNE_SHARED(printing)
 
 add_library (memorydisplay STATIC memory-display.c)
+GAMMU_TUNE_SHARED(memorydisplay)
 target_link_libraries (memorydisplay libGammu)
 
 add_library (messagecmdline STATIC message-cmdline.c)
+GAMMU_TUNE_SHARED(messagecmdline)
 target_link_libraries (messagecmdline libGammu)
 target_link_libraries (messagecmdline printing)
 target_link_libraries (messagecmdline string)
 
 add_library (messagedisplay STATIC message-display.c)
+GAMMU_TUNE_SHARED(messagedisplay)
 target_link_libraries (messagedisplay libGammu)
 target_link_libraries (messagedisplay memorydisplay)
 
@@ -39,5 +45,6 @@ endif(WIN32 AND NOT CMAKE_COMPILER_IS_MINGW AND NOT CMAKE_COMPILER_IS_CYGWIN)
 
 if (NOT HAVE_STRPTIME)
     add_library(strptime STATIC strptime.c)
+    GAMMU_TUNE_SHARED(strptime)
     target_link_libraries (strptime string)
 endif (NOT HAVE_STRPTIME)
